# dragstrip

./: .gitignore  README.md  client.py  options.py  requirements.txt  rpc.conf  run_client.py  run_server.py  run_stat.py  runenv.sh  server.py  setup.cfg  setup.py  statistician.py
cli_serv/: client.py  server.py
common/: cred.py
dragstrip/: drag_client  drag_server  drag_stat  options.py
dragstrip/cli/: client.py  server.py  stats.py
dragstrip/cli_serv/: client.py  server.py
dragstrip/statistician/: log_utils.py  plot.py  rabbit_log.py  sys_log.py
statistician/: log_utils.py  plot.py  rabbit_log.py  sys_log.py
