[metadata]
name = dragstrip
version = 2015.0.1
summary = RabbitMQ oslo.messaging driver load testing tool
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[global]
setup-hooks =
    pbr.hooks.setup_hook


[files]
packages =
        dragstrip


[compile_catalog]
domain = dragstrip


[entry_points]
console_scripts =
       dragstrip-client=dragstrip.cli.client:run_client
       dragstrip-server=dragstrip.cli.server:run_server
       dragstrip-statistics=dragstrip.cli.stat:run_stat

[wheel]
universal = 1
